lessons/https/deploy-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-bokovets-kuber-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bokovets-kuber-v2
  template:
    metadata:
      labels:
        app: bokovets-kuber-v2
    spec:
      containers:
      - name: bokovets-bokover-v2
        image: bokovets/kuber:v2.0
        resources:
          #
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service-bokovets-kuber-v2
spec:
  selector:
    app: bokovets-kuber-v2
  ports:
  - port: 80
    targetPort: http
