lessons/https/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
      - v1.berloga.com
      - v2.berloga.com
    secretName: app-tls
  rules:
  - host: v1.berloga.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-bokovets-kuber-v1
            port: 
              number: 80
  - host: v2.berloga.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-bokovets-kuber-v2
            port: 
              number: 80
